--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Button">
+        <item name="android:textSize">24sp</item>
+        <item name="android:background">#d9d8d8</item>
+        <item name="android:layout_margin">2dp</item>
+    </style>
+
+    <style name="ButtonTwo">
+        <item name="android:textSize">24sp</item>
+        <item name="android:background">#ffa640</item>
+        <item name="android:layout_margin">2dp</item>
+    </style>
 </resources>
